--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     
     <!--Menu-->
-    <nav class="navbar navbar-expand-sm bg-info navbar-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-success">
         <div class="container-fluid">
             <ul class="navbar-nav">
             <li class="nav-item">
