--- a/index.html
+++ b/index.html
@@ -2,46 +2,121 @@
 <html lang="en">
 <head>    
 
-<title>Alta de Alumnos</title>
+<title>Pagina de Bienvenida</title>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/estilos.css">
+
 </head>
 <body>
     
-    <!--Menu-->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-success">
-        <div class="container-fluid">
-            <ul class="navbar-nav">
-            <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Bienvenido</a>
-                </li>
-            <li class="nav-item">
-                    <a class="nav-link" href="mytablero.php">MyTablero</a>
-                </li>                
-            <li class="nav-item">
-                    <a class="nav-link" href="listado_alumno.php">Listado de Alumnos (Admin)</a>
-                </li>
-            <li class="nav-item">
-                    <a class="nav-link" href="registro_alumno.html">Registro de Alumnos (Admin)</a>
-                </li>
-            </ul>
+<!--------------------------------------
+HEADER
+--------------------------------------->
+
+<header>  
+
+    <div class="header-content">
+
+        <div class="logo">
+            <h1><b>My</b>Tablero CBtis 191</h1>
         </div>
-    </nav>
 
-    <!--Pagina Bienvenida-->
+        <div class="menu">
 
-<h1>Bienvenido a MyTablero</h1>
+            <nav>
+                <ul>
+                <li class="menu-selected"><a href="index.html" class="text-menu-selected">Bienvenido</a></li>
+                <li><a href="mytablero.php">MyTablero</a></li>
+                <li><a href="listado_alumno.php">Listado de Alumnos(Admin)</a></li>
+                <li><a href="registro_alumno.html">Registro de Alumnos (Admin)</a></li>
+                <li><a href="#">Insertar Tareas (Admin)</a></li>
+                </ul>
+            </nav>
+   
 
-<p>Aqui se inserta datos sobre la pagina , como se utiliza, img , etc,</p>
+</header>
+
+<!--------------------------------------
+PORTADA
+--------------------------------------->
+
+<div class="container-cover">
+    <div class="container-info-cover">
+        <h1>¡Todo es posible!</h1>
+        <p>“Dime y lo olvido, enséñame y lo recuerdo, involúcrame y lo aprendo”. Benjamin Franklin.</p>
+    </div>
+</div>
+
+<div class="container-content">
+    <article>
+        <h1>Proyecto MyTablero</h1>
+
+        <img src="./img/Logo.png" alt="">
+
+
+            <p>En este proyecto se encuentran incluidos muchos aspectos como los son los formularios, las bases de datos,
+             no podría faltar su diseño, estructura y funcionamiento.  A continuación, unas breves definiciones sobre formularios,
+              bases de datos y con que tipos de lenguajes realizaremos su diseño, estructura y funcionamiento. </p> <br>
+
+            <p>El objetivo de la creación de esta página web es el de que los padres de familia puedan tener un control,
+            así como una forma más accesible para supervisar si sus hijos han hecho y entregado sus tareas en tiempo y forma.
+            Además de que los mismos alumnos tengan un apoyo para poder saber que tareas tienen,
+            cuales aún no han entregado y cuales ya han sido entregadas, así como saber cuál es su calificación de dicha tarea. </p> <br>
+
+            <h1>Diseño</h1>
+
+            <p>Diseño  
+
+            El diseño es un aspecto visual primordial para que una página web sea atractiva y el público pueda disfrutar al navegar por esta misma.
+            El lenguaje que se utiliza para darle diseño a una página web es CSS (en inglés Cascading Style Sheets);
+            es un lenguaje que define la apariencia de un documento escrito en un lenguaje de marcado como lo es HTML.
+            Así, a los elementos de la página web creados con HTML se les dará la apariencia que se desee utilizando CSS: colores,
+            espacios entre elementos, tipos de letra, entre otros. </p><br>
+
+            <h1>Estructura</h1>
+
+            <p>La estructura es el aspecto principal y fundamental para el inicio de una página web, se puede decir que es el esqueleto de nuestra página.
+            Se compone de tres partes: una línea que contiene información sobre la versión de HTML,
+            una sección de cabecera declarativa (delimitada por el elemento HEAD), un cuerpo, que contiene el contenido real del documento. </p>
+
+            <h1>Funcionamiento</h1>
+
+            <p>El funcionamiento es la parte intermedia al elaborar una página web,
+            es el nivel en donde hacemos que cualquier elemento de la página tenga su funcionamiento dependiendo de lo que se indique con las funciones y variantes.
+            El lenguaje que se utiliza para el funcionamiento es JavaScript, es capaz de detectar errores en formularios, 
+            de crear bonitos sliders que se adapten a cualquier pantalla, de hacer cálculos matemáticos de forma eficiente, 
+            de modificar elementos de una página web de forma sencilla.  </p> <br>
+
+            <h1>Objetivo</h1>
+
+            <p>El objetivo de la creación de esta página web es el de que los padres de familia puedan tener un control,
+            así como una forma más accesible para supervisar si sus hijos han hecho y entregado sus tareas en tiempo y forma.
+            Además de que los mismos alumnos tengan un apoyo para poder saber que tareas tienen, cuales aún no han entregado y cuales ya han sido entregadas,
+            así como saber cuál es su calificación de dicha tarea. </p> <br>
+
+    </article>
+</div>
+<!--------------------------------------
+CUERPO
+--------------------------------------->
+
+
+
+
 
 
 
     <!-- Optional JavaScript; choose one of the two! -->
+
+    <script src="./assets/js/vendor/jquery.min.js" type="text/javascript"></script>
+    <script src="./assets/js/vendor/popper.min.js" type="text/javascript"></script>
+    <script src="./assets/js/vendor/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./assets/js/functions.js" type="text/javascript"></script>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
