--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ HEADER - NAVBAR
 
         <!--Logo-->
         <div class="logo">
-            <h1>My<b>Tablero</b> CBtis</h1>
+            <h1>My<b>Tablero</b> CBTis</h1>
         </div>
 
         <!--Menu-->
@@ -43,6 +43,7 @@ HEADER - NAVBAR
                 <li><a href="listado_alumno.php"><i class="fa-solid fa-list"></i> Listado de Alumnos</a></li>
                 <li><a href="registro_alumno.php"><i class="fa-solid fa-address-card"></i> Registro de Alumnos </a></li>
                 <li><a href="insertarTareas.php"><i class="fa-solid fa-paper-plane"></i> Insertar Tareas </a></li>
+                <li><a href="admin_mytablero.php"><i class="fa-solid fa-table"></i> Admin Tablero </a></li>
                 </ul>
             </nav>
 
