--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@ HEADER - NAVBAR
             <nav>
                 <ul>
                 <li class="menu-selected"><a href="index.html" class="text-menu-selected"><i class="fas fa-home"></i> Bienvenido</a></li>
-                <li><a href="mytablero.php"><i class="fa-solid fa-table"></i> MyTablero</a></li>
-                <li><a href="listado_alumno.php"><i class="fa-solid fa-list"></i> Listado de Alumnos</a></li>
-                <li><a href="registro_alumno.php"><i class="fa-solid fa-address-card"></i> Registro de Alumnos </a></li>
-                <li><a href="insertarTareas.php"><i class="fa-solid fa-paper-plane"></i> Insertar Tareas </a></li>
-                <li><a href="admin_mytablero.php"><i class="fa-solid fa-table"></i> Admin Tablero </a></li>
+                <li><a href="page_mytablero.php"><i class="fa-solid fa-table"></i> MyTablero</a></li>
+                <li><a href="page_listadoAlumnos.php"><i class="fa-solid fa-list"></i> Listado de Alumnos</a></li>
+                <li><a href="page_registroAlumnos.php"><i class="fa-solid fa-address-card"></i> Registro de Alumnos </a></li>
+                <li><a href="page_insertarTareas.php"><i class="fa-solid fa-paper-plane"></i> Insertar Tareas </a></li>
+                <li><a href="page_admin_myTablero.php"><i class="fa-solid fa-table"></i> Admin Tablero </a></li>
                 </ul>
             </nav>
 
@@ -143,8 +143,8 @@ PORTADA
                 <img src="./img/Logo.png" alt="">
 
 
-                <h2>¿Por qué se va a hacer? </h2>
-                <p>Para poder dar solución a la problemática de la falta de conocimiento de los padres con respecto al desempeño académico de sus hijos,
+                <h2>¿Quiénes somos?</h2>
+                <p>Somos una página web que se encarga de dar solución a la problemática de la falta de conocimiento de los padres con respecto al desempeño académico de sus hijos,
                 así como para ayudar a los alumnos ya que nosotros al ser parte del cuerpo estudiantil en ocasiones también hemos olvidado alguna tarea,
                 pero con esta página web podremos saber cuáles tareas tenemos asignadas, así como su fecha de entrega. </p>
 
